# agentic-threat-hunting-framework

./: pyproject.toml
athf/: __version__.py
athf/core/: envelope.py  research_manager.py
athf/mcp/tools/: agent_tools.py  attack_tools.py  research_tools.py
automation/: loop.ts
docs/: CHANGELOG.md  envelope-reduction-contract.md
tests/core/: test_envelope.py  test_research_manager_hypothesis.py
